--- a/app/app.html
+++ b/app/app.html
@@ -1,7 +1,7 @@
 <ion-menu [content]="content">
 
   <img src="images/logo.png" style="width: 100px;margin-left:84px"/>
-
+  <!-- this was completed 10/3/18 -->
   <ion-content>
     <ion-list>
       <ion-list-header>Home Search</ion-list-header>
@@ -18,6 +18,7 @@
         <ion-icon item-left name="cart"></ion-icon>
         Shop Rates
       </button>
+      <button menuClose ion-item><ion-icon item-left name="calculator"></ion-icon>Mortgage Calculator</button>
       <ion-list-header>Account</ion-list-header>
       <button menuClose ion-item >
         <ion-icon item-left name="person"></ion-icon>
